[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/skill_upgrade_background.png" type="Texture" id=1]
[ext_resource path="res://assets/sikll1.png" type="Texture" id=2]
[ext_resource path="res://assets/skill4.png" type="Texture" id=3]
[ext_resource path="res://assets/skill3.png" type="Texture" id=4]
[ext_resource path="res://assets/skill2.png" type="Texture" id=5]
[ext_resource path="res://levels/SkillTextMenu.gd" type="Script" id=6]
[ext_resource path="res://levels/SkillButtonMenu.gd" type="Script" id=7]

[node name="skillUpgrade" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 635.0
margin_top = -1.0
margin_right = 1026.0
margin_bottom = 599.0

[node name="SkillButtonMenu" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 108.0
margin_bottom = 600.0
script = ExtResource( 7 )

[node name="Skill1Button" type="Button" parent="HBoxContainer/SkillButtonMenu"]
margin_right = 108.0
margin_bottom = 102.0
icon = ExtResource( 2 )
flat = true

[node name="Skill2Button" type="Button" parent="HBoxContainer/SkillButtonMenu"]
margin_top = 106.0
margin_right = 108.0
margin_bottom = 208.0
icon = ExtResource( 5 )
flat = true

[node name="Skill3Button" type="Button" parent="HBoxContainer/SkillButtonMenu"]
margin_top = 212.0
margin_right = 108.0
margin_bottom = 314.0
icon = ExtResource( 4 )
flat = true

[node name="Skill4Button" type="Button" parent="HBoxContainer/SkillButtonMenu"]
margin_top = 318.0
margin_right = 108.0
margin_bottom = 420.0
icon = ExtResource( 3 )
flat = true

[node name="SkillTextMenu" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 112.0
margin_right = 112.0
margin_bottom = 600.0
script = ExtResource( 6 )

[node name="skill1Text" type="Label" parent="HBoxContainer/SkillTextMenu"]
margin_bottom = 14.0

[node name="skill2Text" type="Label" parent="HBoxContainer/SkillTextMenu"]
margin_top = 18.0
margin_bottom = 32.0

[node name="skill3Text" type="Label" parent="HBoxContainer/SkillTextMenu"]
margin_top = 36.0
margin_bottom = 50.0

[node name="skill4Text" type="Label" parent="HBoxContainer/SkillTextMenu"]
margin_top = 54.0
margin_bottom = 68.0

[node name="BackButton" type="Button" parent="."]
margin_left = 847.0
margin_top = 536.0
margin_right = 1023.0
margin_bottom = 600.0
text = "back"

[node name="Money" type="Label" parent="."]
margin_right = 164.0
margin_bottom = 62.0
uppercase = true

[connection signal="pressed" from="HBoxContainer/SkillButtonMenu/Skill1Button" to="HBoxContainer/SkillButtonMenu" method="_on_Skill1Button_pressed"]
[connection signal="pressed" from="HBoxContainer/SkillButtonMenu/Skill2Button" to="HBoxContainer/SkillButtonMenu" method="_on_Skill2Button_pressed"]
[connection signal="pressed" from="HBoxContainer/SkillButtonMenu/Skill3Button" to="HBoxContainer/SkillButtonMenu" method="_on_Skill3Button_pressed"]
[connection signal="pressed" from="HBoxContainer/SkillButtonMenu/Skill4Button" to="HBoxContainer/SkillButtonMenu" method="_on_Skill4Button_pressed"]
[connection signal="pressed" from="BackButton" to="HBoxContainer/SkillButtonMenu" method="_on_BackButton_pressed"]
